; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_direct3d.c_ass_to_d3d_color.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_direct3d.c_ass_to_d3d_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ass_to_d3d_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ass_to_d3d_color(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = ashr i32 %7, 24
  %9 = and i32 %8, 255
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %2, align 4
  %11 = ashr i32 %10, 16
  %12 = and i32 %11, 255
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %2, align 4
  %14 = ashr i32 %13, 8
  %15 = and i32 %14, 255
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %2, align 4
  %17 = and i32 %16, 255
  %18 = sub nsw i32 255, %17
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @D3DCOLOR_ARGB(i32 %19, i32 %20, i32 %21, i32 %22)
  ret i32 %23
}

declare dso_local i32 @D3DCOLOR_ARGB(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
